# aerovaldb

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  api.rst  conftest.py  index.rst  mutmut_config.py  pytest.ini  requirements.txt  setup.cfg  test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI-tests.yml  CI.yml  publish.yml  python-app.yml
docs/: api.rst  conf.py  extending-aerovaldb.rst  index.rst  installation.rst  locking.rst
scripts/: aiofile_benchmark.py  build_sqlite_test_database.py  iterate_over_uris_benchmark.py  tmp.py
src/aerovaldb/: __init__.py  aerovaldb.py  const.py  exceptions.py  generate_endpoints_from_config.py  jsonfiledb.py  lock.py  plugins.py  routes.py  sqlitedb.py  types.py  utils.py
src/aerovaldb/jsondb/: __init__.py  backwards_compatibility.py  cache.py  filter.py  jsonfiledb.py  lock.py  readers.py  templatemapper.py  uri.py  uricache.py  uuid.py
src/aerovaldb/lock/: __init__.py  lock.py
src/aerovaldb/serialization/: default_serialization.py
src/aerovaldb/sqlitedb/: __init__.py  sqlitedb.py  utils.py
src/aerovaldb/utils/: __init__.py  asyncio.py  benchmark.py  compat.py  copy.py  encode.py  filter.py  json.py  query.py  string_utils.py  uri.py
src/aerovaldb/utils/string_mapper/: __init__.py  mapper.py
tests/: conftest.py  test_aerovaldb.py  test_jsonFileDB.py  test_jsonfiledb.py  test_plugins.py  test_utils.py
tests/fixtures/: fixtures.py
tests/jsondb/: test_cache.py  test_jsonfiledb.py  test_lock.py
tests/lock/: test_lock.py
tests/sqlitedb/: test_sqlitedb.py  test_utils.py
tests/test-db/json/: linked-json-project
tests/test-db/json/project/: experiments.json
tests/test-db/json/project-no-experiments-json/experiment/forecast/: region_network-obsvar_layer.json
tests/test-db/json/project-no-experiments-json/experiment/hm/: glob_stats_frequency.json
tests/test-db/json/project-no-experiments-json/experiment/ts/diurnal/: location_network-obsvar_layer.json
tests/test-db/json/project/experiment/: cfg_project_experiment.json  statistics.json
tests/test-db/json/project/experiment-old/: cfg_project_experiment-old.json
tests/test-db/json/project/experiment-old/hm/ts/: stats_ts.json
tests/test-db/json/project/experiment-old/map/: network-obsvar_layer_model-modvar.json
tests/test-db/json/project/experiment/contour/: modvar_model.geojson
tests/test-db/json/project/experiment/contour/modvar_model/: modvar_model_timestep.geojson
tests/test-db/json/project/experiment/fairmode/: region_network_obsvar_layer.json
tests/test-db/json/project/experiment/hm/: glob_stats_frequency.json
tests/test-db/json/project/experiment/hm/ts/: _network-obsvar-layer.json  region-network-obsvar-layer.json  region_network-obsvar-layer.json
tests/test-db/json/project/experiment/map/: network-obsvar_layer_model-modvar_time.json  network-obsvar_layer_model-modvar_time2.json
tests/test-db/json/project/experiment/profiles/: region_network_obsvar.json
tests/test-db/json/project/experiment/scat/: network-obsvar_layer_model-modvar.json  network-obsvar_layer_model-modvar_time.json
tests/test-db/json/project/experiment/ts/: region_network-obsvar_layer.json.json
tests/test-db/json/reports/project/experiment/: title.json
tests/test-db/json/reports/project/experiment/contour/: title.json
tests/test-db/json/reports/project/experiment/img/: pixel.avif  pixel.tiff
tests/test-db/linked-json-project/experiment/: cfg_linked-json-project_experiment.json
tests/test-db/sqlite/: test.sqlite  test2.sqlite
tests/test-db/tmp/test1/test2/hm/: glob_stats_test3.json
tests/utils/: test_copy.py  test_string_utils.py  test_uri.py
tests/utils/string_mapper/: test_string_mapper.py
