[metadata]
name = aerovaldb
version = 0.0.1.dev0
author = Augustin Mortier, Thorbjørn Lundin, Heiko Klein
author_email = Heiko.Klein@met.no
description = aeroval database to communicate between pyaerocom and aeroval
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Topic :: Scientific/Engineering :: Atmospheric Science
url = https://github.com/metno/aerovaldb


[options]
python_version = >=3.9
install_requires =
    importlib-metadata >= 3.6; python_version < "3.10"
package_dir =
    =src
packages = aerovaldb
test_require = tox:tox

[options.entry_points]
aerovaldb =
    json_files = aerovaldb.jsonfiledb:AerovalJsonFileDB

[tox:tox]
min_version = 4.0
env_list =
    py311
    py310
    py39
depends =

[testenv]
commands = python3 -m unittest discover -s tests

