[metadata]
name = aerovaldb
version = 0.0.19.dev0
author = Augustin Mortier, Thorbjørn Lundin, Heiko Klein
author_email = Heiko.Klein@met.no
description = aeroval database to communicate between pyaerocom and aeroval
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Topic :: Scientific/Engineering :: Atmospheric Science
url = https://github.com/metno/aerovaldb


[options]
python_version = >=3.10
install_requires =
    importlib-metadata >= 3.6; python_version < "3.10"
    simplejson
    aiofile
    async_lru
    packaging
    regex
package_dir =
    =src
packages =
    find:
tests_require =
    tox:tox
    pytest

[options.packages.find]
where=src

[options.entry_points]
aerovaldb =
    json_files = aerovaldb.jsondb:AerovalJsonFileDB

[tox:tox]
labels =
    test = py310
    lint = mpy 
min_version = 4.0
env_list =
    mpy
    py310
    py311
    py312
skip_missing_interpreters = True
isolated_build = True
requires =
    setuptools >=40.6.0,<=60.9.3
depends =

[testenv]
commands_pre =
    python --version
deps =
    pytest
    pytest_asyncio
commands =
    python -m pytest .

[mpy]
commands_pre =
    python --version
deps =
    mypy
commands =
    python -m mypy src/
