[metadata]
name = aerovaldb
version = 0.1.2dev0
author = Augustin Mortier, Thorbjørn Lundin, Heiko Klein
author_email = Heiko.Klein@met.no
description = aeroval database to communicate between pyaerocom and aeroval
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Topic :: Scientific/Engineering :: Atmospheric Science
url = https://github.com/metno/aerovaldb

[options]
python_version = >=3.10
install_requires =
    importlib-metadata >= 3.6; python_version < "3.10"
    simplejson
    aiofile
    async_lru
    packaging
    filetype
package_dir =
    =src
packages =
    find:
tests_require =
    tox:tox
    pytest
    mutmut

[options.packages.find]
where=src

[options.entry_points]
aerovaldb =
    json_files = aerovaldb.jsondb:AerovalJsonFileDB
    sqlitedb = aerovaldb.sqlitedb:AerovalSqliteDB
console_scripts =
    aerovaldbcp = aerovaldb.utils.copy:main

[tox:tox]
labels =
    test = py310, py311, py312
    lint = mpy 
min_version = 4.0
env_list =
    mpy
    py310
    py311
    py312
skip_missing_interpreters = True
isolated_build = True
requires =
depends =

[testenv]
commands_pre =
    python --version
deps =
    pytest
    pytest_asyncio
commands =
    python -m pytest .

[mpy]
commands_pre =
    python --version
deps =
    mypy
commands =
    python -m mypy src/

[mutmut]
paths_to_mutate=src/
tests_dir=tests/